--- a/coinList/templates/coinList/coins_list.html
+++ b/coinList/templates/coinList/coins_list.html
@@ -1,5 +1,4 @@
-{% extends 'main/base.html' %}
-{% load static %}
+{% extends 'base.html' %}{% load static %}
 {% load coins_tags %}
 
 {% block content %}
@@ -12,71 +11,6 @@
                 <input class="form-control me-2" type="search" id="coin-search" name="q" placeholder="Search coin by name..." aria-label="Search">
                 <button class="btn btn-outline-success text-white" type="submit">Search</button>
             </form>
-
-            <div class="dropdown mb-2">
-                <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                    Filters
-                </button>
-
-                <form action="{% if request.GET.q %}{% url 'coinList:search' %}{% else %}{% url 'coinList:index'  %}{% endif %}"  method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
-                    {% if request.GET.q %}
-                        <input type="hidden" name="q" value="{{ request.GET.q }}">
-                    {% endif %}
-                    <p class="text-white mx-3 mt-3">Sorting by price:</p>
-{#                    <div class="form-check text-white mx-3">#}
-{#                        <input class="form-check-input" type="radio" name="order_by_price" id="flexRadioDefaultPrice" value="default" {% if request.GET.order_by_price == 'default' %}checked{% endif %} >#}
-{#                        <label class="form-check-label" for="flexRadioDefaultPrice">#}
-{#                            Default#}
-{#                        </label>#}
-{#                    </div>#}
-                    <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_price" id="flexRadioPriceUp" value="price" {% if request.GET.order_by_price == 'price' %}checked{% endif %}>
-                        <label class="form-check-label" for="flexRadioPriceUp">
-                            Price up
-                        </label>
-                    </div>
-                    <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_price" id="flexRadioPriceDown" value="-price" {% if request.GET.order_by_price == '-price' %}checked{% endif %} >
-                        <label class="form-check-label" for="flexRadioPriceDown">
-                            Price down
-                        </label>
-                    </div>
-                    <p class="text-white mx-3 mt-3">Sorting by volume:</p>
-                    <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_volume" id="flexRadioVolumeDefault" value="default" {% if request.GET.order_by_volume == 'default' %}checked{% endif %} >
-                        <label class="form-check-label" for="flexRadioVolumeDefault">
-                            Default
-                        </label>
-                    </div>
-                    <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_volume" id="flexRadioVolumeUp" value="volume" {% if request.GET.order_by_volume == 'volume' %}checked{% endif %}>
-                        <label class="form-check-label" for="flexRadioVolumeUp">
-                            Volume Up
-                        </label>
-                    </div>
-                    <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_volume" id="flexRadioVolumeDown" value="-volume" {% if request.GET.order_by_volume == '-volume' %}checked{% endif %}>
-                        <label class="form-check-label" for="flexRadioVolumeDown">
-                            Volume Down
-                        </label>
-                    </div>
-                    <p class="text-white mx-3 mt-3">Sorting by name:</p>
-                    <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_name" id="flexRadioNameAsc" value="name" {% if request.GET.order_by_name == 'name' %}checked{% endif %}>
-                        <label class="form-check-label" for="flexRadioNameAsc">
-                            Name ascending
-                        </label>
-                    </div>
-                    <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_name" id="flexRadioNameDec" value="-name" {% if request.GET.order_by_name == '-name' %}checked{% endif %}>
-                        <label class="form-check-label" for="flexRadioNameDec">
-                            Name descending
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-primary mx-3 mt-3">Apply</button>
-                </form>
-            </div>
         </div>
         <!--    End filtering    -->
 
@@ -85,7 +19,10 @@
             <!-- header start -->
             <div class="list_header">
                 <div class="list_header_item" style="flex: 3">Name</div>
-                <div class="list_header_item"  style="flex: 2">Price</div>
+{#                    #}
+                <div class="list_header_item"  style="flex: 2">
+                    <div onclick="toggleSortOrder()" style="cursor: pointer">Price &#x25b4;&#x25be;</div>
+                </div>
                 <div class="list_header_item" style="flex: 2">24h Change</div>
                 <div class="list_header_item" style="flex: 2">Volume (24h)</div>
                 <div class="list_header_item" style="flex: 2">Market Cap</div>
@@ -98,7 +35,7 @@
 {#                                	<img src="{% static 'deps/images/Not found image.png' %}" alt="logo" class="coin_logo">#}
 {#                                <span class="coin_symbol">BTC</span>#}
 {#                            </div>#}
-{#                            <div class="coin price">additional</div>#}
+{#                            <div id="coin_rice2221">additional</div>#}
 {#                            <div class="coin change">#}
 {#                                	<span class="negative">▼ </span>#}
 {#                            </div>#}
@@ -114,7 +51,7 @@
                 {% for coin in coins  %}
 
                     <div class="coin_item_wrapper" onclick="window.location.href='{% url 'coins:coin' coin.slug %}'">
-                        <div class="coin_item" data-symbol="{{ coin.symbol }}"  data-price="">
+                        <div class="coin_item" data-symbol="{{ coin.symbol }}">
                             <div class="coin name" >
                                 {% if coin.image %}
                                 	<img src="{{ coin.image.url }}" alt="logo" class="coin_logo">
@@ -123,7 +60,7 @@
                                 {% endif %}
                                 <span class="coin_symbol">{{ coin.symbol }}</span>
                             </div>
-                            <div class="coin price"></div>
+                            <div class="coin price">waiting...</div>
                             <div class="coin change">
                                 {% if '+' in coin.change  %}
                                 	<span class="positive">▲ </span>
@@ -135,9 +72,7 @@
                             <div class="coin market_cap"></div>
                         </div>
                     </div>
-
-
-                {% endfor %}
+            {% endfor %}
 
 
             <!--  content coin end    -->
@@ -181,10 +116,10 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{% static 'deps/js/testing/main.js' %}"></script>
+    <script src="{% static 'deps/js/testing/main_2.js' %}"></script>
 
     <!-- Bootstrap JS (разом з Popper.js) -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+{#    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>#}
+{#    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>#}
 
 {% endblock %}
