--- a/coins/templates/coins/coin.html
+++ b/coins/templates/coins/coin.html
@@ -1,5 +1,4 @@
-{% extends 'main/base.html' %}
-{% load static %}
+{% extends 'base.html' %}{% load static %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'deps/css/coin.css' %}">
