--- a/static/deps/css/style.css
+++ b/static/deps/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -11,11 +12,17 @@ body {
 
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 12px;
     background-color: #3a3939;
     color: white;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
 }
 .row{
     width: 100%;
@@ -44,14 +51,18 @@ footer{
 .log-in-btn {
     background-color: #007BFF;
     border: none;
-    padding: 10px 20px;
     color: white;
     cursor: pointer;
     border-radius: 12px;
+    height: 24px;
+    width: 80px;
 }
 .crypto-list {
     max-width: 1400px;
     margin: 20px 0;
+}
+.nav-item.dropdown{
+    text-align: end;
 }
 
 .list_header {
@@ -183,4 +194,16 @@ button[type="submit"] {
 }
 .dropdown-menu{
     width: 200px;
+}
+
+.dropdown-toggle::after {
+  content: none;
+}
+.dropdown-item:focus, .dropdown-item:hover {
+    background-color: #2b2f32 !important;
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: none !important;
+  }
 }
