--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,19 +7,24 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                     <h2 class="text-center mb-4">Log in</h2>
-                    <form action="#" method="post">
+
+                    <form action="{% url 'user:login' %}" method="post">
+                    {% csrf_token %}
+                    {% if form.non_field_errors %}
+
+                    {% endif %}
                         <input type="hidden" name="next" value="#">
                         <div class="mb-3">
                             <label for="id_username" class="form-label">Name</label>
-                            <input type="text" class="form-control" name="username" id="id_username" placeholder="Enter your name" required>
+                            <input type="text" class="form-control" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" name="username" id="id_username" placeholder="Enter your name" required>
                         </div>
                         <div class="mb-3">
                             <label for="id_password" class="form-label">Password</label>
-                            <input type="password" class="form-control" name="password" id="id_password" placeholder="Enter your password" required>
+                            <input type="password" class="form-control" value="" name="password" id="id_password" placeholder="Enter your password" required>
                         </div>
 
                         <button type="submit" class="btn btn-dark btn-block">Enter</button>
-                    </form>
+                   </form>
                     <div class="mt-3">
                         <a href="#">Forgot password?</a> | <a href="{% url 'user:registration' %}">Create account</a>
                     </div>
