Registration form and controller are ready

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,20 +24,29 @@
                 <div style="  text-align: center;">
                     <a class="navbar-brand" href="{% url "coinList:index" %}">Coin List</a>
                 </div>
-                <div class=" dropdown d-flex justify-content-end">
-                    <a class="nav-link dropdown-toggle text-white"  role="button" data-bs-toggle="dropdown">
-                        Account
-                    </a> 
-                    <ul class="dropdown-menu"  style="background-color:#3a3939; " >
-                        <li><a class="dropdown-item text-white" href="{% url 'admin:index' %}">Admin panel</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url 'user:profile' %}">Profile</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item text-white" href="#">Log out</a></li>
-                    </ul>
-                </div>
-                <button class="log-in-btn" onclick="window.location.href='{% url 'user:login' %}'" >Log In</button>
+            
+                {% if  user.is_authenticated %}
+                    <div class=" dropdown d-flex justify-content-end">
+                        <a class="nav-link dropdown-toggle text-white"  role="button" data-bs-toggle="dropdown">
+                            Account
+                        </a> 
+                        <ul class="dropdown-menu"  style="background-color:#3a3939; " >
+                        
+                            {% if user.is_admin or user.is_staff %}
+                                <li><a class="dropdown-item text-white" href="{% url 'admin:index' %}">Admin panel</a></li>
+                            {% endif %} 
+                        
+                            <li><a class="dropdown-item text-white" href="{% url 'user:profile' %}">Profile</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                                <li><a class="dropdown-item text-white" href="{% url 'user:logout' %}">Log out</a></li>
+                        </ul>
+                    </div>
+                {% else %}
+                        <button class="log-in-btn" onclick="window.location.href='{% url 'user:login' %}'" >Log In</button>
+                {% endif %} 
+            
             </div>
         </header>
 
