--- a/templates/base.html
+++ b/templates/base.html
@@ -59,10 +59,15 @@
 
     {% block footer %}
     {% endblock %}
-    <script src="{% static 'deps/js/bootstrap/bootstrap.bundle.min.js' %}"></script>
-
+    
+    
     {% block scripts %}
     {% endblock %}
+
+    <script src="{% static 'deps/js/jquery/jquery-3.7.0.min.js' %}"></script>
+    <script src="{% static 'deps/js/jquery-events.js' %}"></script>
+    <script src="{% static 'deps/js/bootstrap/bootstrap.bundle.min.js' %}"></script>
+
 
 </body>
 </html>
