--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,40 +9,69 @@
                 <div class="col-md-5">
                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                         <h3 class="text-center mb-4">Profile</h3>
-                        <form action="" method="post" enctype="multipart/form-data">
-                        <div class="row" style="margin: 0 auto;">
+                        <form action="{% url 'user:profile' %}" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <div class="row" style="margin: 0 auto;">
                             <div class="col-md-12 mb-3 text-center">
-                                <img src="{% static 'deps/images/baseavatar.jpg' %}" alt="User avatar" class="img-fluid rounded-circle" style="max-width: 150px; max-height: 150px;">
+                                {% if  user.image %}
+                                    <img src="{{ user.image.url }}"
+                                         alt="User avatar" class="img-fluid rounded-circle"
+                                         style="max-width: 150px; max-height: 150px;">
+                                {% else %}
+                                    <img src="{% static 'deps/images/baseavatar.jpg' %}"
+                                         alt="User avatar" class="img-fluid rounded-circle"
+                                         style="max-width: 150px; max-height: 150px;">
+                                {% endif %}
                                 <input type="file" class="form-control mt-3" id="id_image"
                                        name="image"
                                        accept="image/*">
+                                {% if form.image.errors %}
+                                	<div class="alert alert-danger alert-dismissible fade show">{{ form.image.errors }}</div>
+                                {% endif %} 
                             </div>
                             <div class="col-md-12 mb-3">
                                 <label for="id_first_name" class="form-label">Name</label>
                                 <input type="text" class="form-control" id="id_first_name"
                                        name="first_name"
                                        placeholder="Enter your name"
-                                       value=""
+                                       value="{{ form.first_name.value }}"
                                        required>
+                                {% if form.first_name.error %}
+                                	<div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>
+                                {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
                                 <label for="id_last_name" class="form-label">Surname</label>
                                 <input type="text" class="form-control" id="id_last_name"
                                        name="last_name"
                                        placeholder="Enter your surname"
-                                       value=""
+                                       value="{{ form.last_name.value }}"
                                        required>
+                                {% if form.last_name.error %}
+                                	<div class="alert alert-danger alert-dismissible fade show">{{ form.last_name.errors }}</div>
+                                {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
                                 <label for="id_username" class="form-label">Username</label>
                                 <input type="text" class="form-control" id="id_username"
-                                       placeholder="Enter your username" value="" name="username" required>
+                                       placeholder="Enter your username"
+                                       value="{{ form.username.value }}"
+                                       name="username"
+                                       required>
+                                {% if form.username.error %}
+                                	<div class="alert alert-danger alert-dismissible fade show">{{ form.username.errors }}</div>
+                                {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
                                 <label for="id_email" class="form-label">Email*</label>
                                 <input type="email" class="form-control" id="id_email"
-                                       placeholder="Enter your email *youremail@example.com" value="" name="email"
+                                       placeholder="Enter your email *youremail@example.com"
+                                       value="{{ form.email.value }}"
+                                       name="email"
                                        required>
+                                {% if form.email.error %}
+                                	<div class="alert alert-danger alert-dismissible fade show">{{ form.email.errors }}</div>
+                                {% endif %}
                             </div>
                         </div>
                         <button type="submit" class="btn btn-dark">Save</button>
