--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,10 +10,9 @@
 
                     <form action="{% url 'user:login' %}" method="post">
                     {% csrf_token %}
-                    {% if form.non_field_errors %}
-
-                    {% endif %}
-                        <input type="hidden" name="next" value="#">
+                    {% if request.GET.next %}
+                        <input type="hidden" name="next" value="{{ request.GET.next }}">
+                    {% endif %} 
                         <div class="mb-3">
                             <label for="id_username" class="form-label">Name</label>
                             <input type="text" class="form-control" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" name="username" id="id_username" placeholder="Enter your name" required>
