--- a/coins/templates/coins/coin.html
+++ b/coins/templates/coins/coin.html
@@ -1,109 +1,170 @@
-{% extends 'base.html' %}{% load static %}
+{% extends 'base.html' %}
+{% load static %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'deps/css/coin.css' %}">
+     <style>
+        canvas {
+            display: block;
+            margin: 50px auto;
+            padding-top: 5vh ;
+        }
+    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 {% endblock %}
 
 {% block content %}
 	<div class="row">
-           <div class="coin_info">
-               <div class="coin-info-container">
-                   {% if coin.image %}
-                   	    <div class="coin_logo"><img src="{{ coin.image.url }}" alt="coin_logo"></div>
-                        {% else %}
-                   	    <div class="coin_logo"><img src="{% static 'deps/images/Not found image.png' %}" alt="coin_logo"></div>
-                   {% endif %}
-               {% if coin.name %}
-                    <div class="coin_name"> {{ coin.name }} Price</div>
+        <div class="coin_info">
+            <div class="coin-name-logo">
+               {% if coin.image %}
+                    <div class="coin_logo"><img src="{{ coin.image.url }}" alt="coin_logo"></div>
+                    {% else %}
+                    <div class="coin_logo"><img src="{% static 'deps/images/Not found image.png' %}" alt="coin_logo"></div>
                {% endif %}
-               </div>
-               <div class="market-info">
-                   <div class="market-info-item">Price: $<span id="coin-price">66,563.22</span></div>
-                   <div class="market-info-item">Market Cap: <span id="market-cap">$1.3T</span></div>
-               </div>
+               {% if coin.name %}
+                    <div class="coin_name"> {{ coin.name }}</div>
+               {% endif %}
+{#               {% if coin.symbol %}#}
+{#                   <div id="coin_symbol">{{ coin.symbol }}</div>#}
+{#               {% endif %}#}
+               <div class="market-info-item">Price: $<span class="market_info_green">{{ coin_info.openPrice }}</span></div>
+
+            </div>
+
+            <div class="market-info">
+
+                <div class="market_container">
+                    <div class="market-info-item"><b>Change</b></div>
+                    {% if  coin_info.priceChange > 0 %}
+                        <div class="market-info-item positive">{{ coin_info.priceChange }} (USDT)</div>
+                        <div class="market-info-item positive">{{ coin_info.priceChangePercent }} (%)</div>
+
+                    {% else %}
+                        <div class="market-info-item negative">{{ coin_info.priceChange }} (USDT)</div>
+                        <div class="market-info-item negative">{{ coin_info.priceChangePercent }} (%)</div>
+                    {% endif %}
+
+                </div>
+                <div class="market_container">
+                    <div class="market-info-item"><b>Min/Max</b></div>
+                    <div class="market-info-item">{{ coin_info.highPrice }}</div>
+                    <div class="market-info-item">{{ coin_info.lowPrice }}</div>
+                </div>
+                <div class="market_container">
+                    <div class="market-info-item"><b>Volume</b></div>
+                    <div class="market-info-item">{{ coin_info.volume }} ({{ coin.symbol}})</div>
+                    <div class="market-info-item">{{ coin_info.quoteVolume }} (USDT)</div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="graphics"  >
+        {#               <div class="order-book">#}
+        {#                   <div class="header">#}
+        {#                       <ul>#}
+        {#                           <li>Price (USDT)</li>#}
+        {#                           <li>Amount (Coin)</li>#}
+        {#                           <li>Total (USDT)</li>#}
+        {#                       </ul>#}
+        {#                   </div>#}
+        {##}
+        {#                   <div class="order-book-item">#}
+        {##}
+        {#                       <div class="ask">#}
+        {#                           <ul >#}
+        {#                               <li>Price ask </li>#}
+        {#                               <li>Amount ask </li>#}
+        {#                               <li>Total ask </li>#}
+        {#                           </ul>#}
+        {#                       </div>#}
+        {##}
+        {#                       <div class="ask">#}
+        {#                           <ul >#}
+        {#                               <li>Price ask </li>#}
+        {#                               <li>Amount ask </li>#}
+        {#                               <li>Total ask </li>#}
+        {#                           </ul>#}
+        {#                       </div>#}
+        {##}
+        {#                       <div class="ask">#}
+        {#                           <ul >#}
+        {#                               <li>Price ask </li>#}
+        {#                               <li>Amount ask </li>#}
+        {#                               <li>Total ask </li>#}
+        {#                           </ul>#}
+        {#                       </div>#}
+        {#                   </div>#}
+        {##}
+        {#                   <div class="order-book-item">#}
+        {##}
+        {#                       <div class="bid">#}
+        {#                           <ul >#}
+        {#                               <li>Price bid </li>#}
+        {#                               <li>Amount bid </li>#}
+        {#                               <li>Total bid </li>#}
+        {#                           </ul>#}
+        {#                       </div>#}
+        {##}
+        {#                       <div class="bid">#}
+        {#                           <ul >#}
+        {#                               <li>Price bid </li>#}
+        {#                               <li>Amount bid </li>#}
+        {#                               <li>Total bid </li>#}
+        {#                           </ul>#}
+        {#                       </div>#}
+        {##}
+        {#                       <div class="bid">#}
+        {#                           <ul >#}
+        {#                               <li>Price bid </li>#}
+        {#                               <li>Amount bid </li>#}
+        {#                               <li>Total bid </li>#}
+        {#                           </ul>#}
+        {#                       </div>#}
+        {#                   </div>#}
+        {#               </div>#}
+
+            {# Interval from for global chart. Using js  #}
+            <form id="radio-form">
+                 <div class="custom-control custom-radio">
+                    <input type="radio" id="radio60m" class="custom-control-input" name="radioChart" value="60m">
+                    <label class="custom-control-label  text-white" for="radio60m">1h</label>
+                 </div>
+                 <div class="custom-control custom-radio">
+                    <input type="radio" id="radio4h" class="custom-control-input" name="radioChart" value="4h" checked>
+                    <label class="custom-control-label  text-white" for="radio4h">4h</label>
+                 </div>
+                 <div class="custom-control custom-radio">
+                    <input type="radio" id="radio1d" class="custom-control-input" name="radioChart" value="1d">
+                    <label class="custom-control-label  text-white" for="radio1d">1d</label>
+                 </div>
+                 <div class="custom-control custom-radio">
+                    <input type="radio" id="radio1W" class="custom-control-input" name="radioChart" value="1W">
+                    <label class="custom-control-label  text-white" for="radio1W">1W</label>
+                 </div>
+                 <div class="custom-control custom-radio">
+                    <input type="radio" id="radio1M" class="custom-control-input" name="radioChart" value="1M">
+                    <label class="custom-control-label  text-white" for="radio1M">1M</label>
+                 </div>
+            </form>
+           <div style="display: flex; justify-content: center; align-items: center">
+                <canvas id="chart" style="width: calc(100vw - 20px); margin: 0 auto"></canvas>
            </div>
-
-           <div class="graphics"  >
-               <div class="order-book">
-                   <div class="header">
-                       <ul>
-                           <li>Price (USDT)</li>
-                           <li>Amount (Coin)</li>
-                           <li>Total (USDT)</li>
-                       </ul>
-                   </div>
-
-                   <div class="order-book-item">
-
-                       <div class="ask">
-                           <ul >
-                               <li>Price ask </li>
-                               <li>Amount ask </li>
-                               <li>Total ask </li>
-                           </ul>
-                       </div>
-
-                       <div class="ask">
-                           <ul >
-                               <li>Price ask </li>
-                               <li>Amount ask </li>
-                               <li>Total ask </li>
-                           </ul>
-                       </div>
-
-                       <div class="ask">
-                           <ul >
-                               <li>Price ask </li>
-                               <li>Amount ask </li>
-                               <li>Total ask </li>
-                           </ul>
-                       </div>
-                   </div>
-
-                   <div class="order-book-item">
-
-                       <div class="bid">
-                           <ul >
-                               <li>Price bid </li>
-                               <li>Amount bid </li>
-                               <li>Total bid </li>
-                           </ul>
-                       </div>
-
-                       <div class="bid">
-                           <ul >
-                               <li>Price bid </li>
-                               <li>Amount bid </li>
-                               <li>Total bid </li>
-                           </ul>
-                       </div>
-
-                       <div class="bid">
-                           <ul >
-                               <li>Price bid </li>
-                               <li>Amount bid </li>
-                               <li>Total bid </li>
-                           </ul>
-                       </div>
-                   </div>
-
-
-               </div>
-
-               <div class="price-chart">
-                   <canvas class="chart"></canvas>
-               </div>
-           </div>
+        </div>
     </div>
 {% endblock %}
- <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.2/d3.min.js"
-            integrity="sha512-oKI0pS1ut+mxQZdqnD3w9fqArLyILRsT3Dx0B+8RVEXzEk3aNK3J3pWlaGJ8MtTs1oiwyXDAH6hG6jy1sY0YqA=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="{% static 'deps/js/script.js' %}"></script>
+
 {% block scripts %}
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.3.1"></script>
+    <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom/dist/chartjs-plugin-zoom.min.js"></script>
+    <script src="{% static 'deps/js/chartjs-chart-financial.min.js' %}" type="text/javascript"></script>
+
+    <script src="{% static 'deps/js/coin.js' %}"></script>
+
 
 {% endblock %}
+
