--- a/static/deps/css/coin.css
+++ b/static/deps/css/coin.css
@@ -1,46 +1,82 @@
 
+body{
+    background-image: none !important;
+    /*background-color: #182432 !important;*/
+}
+canvas {
+    background-color: #182432 !important;
+    padding: 20px 20px  ;
+    border-radius: 0 0 15px 15px ;
+}
+
 ul {
     list-style: none;
     padding-left: 0;
 }
 .coin_info{
-    display: flex;
-    width: 100%;
-    height: 200px;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: start;
-    padding: 20px 12px 12px 12px
-
+    margin-bottom: 8px;
+    width: 40vw;
+    padding: 20px 12px 12px 12px;
+    min-width: 550px;
 }
 .coin_name{
     font-weight: bold;
     font-size: 30px;
+    margin-right: 20px;
+
+}
+.coin-name-logo .market-info-item{
+    border-radius:50px;
+    height:50px;
 
 }
 .coin_logo{
     margin: 0 20px 0 20px;
-
+    width: 16px;
 }
 .coin_logo img{
     max-width: 30px;
     max-height: 30px;
 }
 .market-info{
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    flex-wrap: wrap;
 
 }
 .market-info-item{
     box-sizing: border-box;
     background-color: #2b2f32;
-    padding: 4px;
-    border-radius: 10px;
     color: white;
+    justify-content: center;
+    display: flex;
+    padding: 20px 16px;
 }
-#coin-price{
+.market_container:nth-child(1) .market-info-item:nth-child(1){
+    border-radius: 8px 0 0 0;
+}
+.market_container:nth-child(1) .market-info-item:nth-child(3){
+        border-radius: 0 0 0 8px;
+}
+.market_container:nth-child(3) .market-info-item:nth-child(1){
+    border-radius: 0 8px 0 0;
+}
+.market_container:nth-child(3) .market-info-item:nth-child(3){
+        border-radius: 0 0 8px 0;
+}
+.market_container{
+    display: flex;
+    flex:1;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.market_info_green{
     color: green;
+}
+.market_info_red{
+    color: red;
 }
 .coin.name{
     flex:3;
@@ -58,10 +94,6 @@ ul {
     justify-content: start;
 
 }
-.market-info div {
-    margin: 10px 0;
-}
-
 .charts {
     display: flex;
     justify-content: space-between;
@@ -118,6 +150,37 @@ ul {
 .auth_tool{
     display: flex; align-items: center; justify-content: space-around; gap:10px
 }
-.coin-info-container{
-    display: flex; align-items: center; justify-content: start; flex-direction: row;
+.coin-name-logo{
+    display: flex; align-items: center; justify-content: start;flex-direction: row ;
+}
+#coin_symbol{
+    margin-bottom: 20px ;
+}
+.row{
+    width: 100%;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
+.value{
+    display: flex;
+}
+.positive {
+    color: #00ff00;
+}
+.negative {
+    color: #ff0000;
+}
+#radio-form{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap:4px;
+    background-color: #182432;
+    border-radius: 15px 15px 0 0;
+}
+.custom-control-label.text-white{
+    margin-right: 16px;
+}
+.custom-control.custom-radio:last-child label{
+    margin-right: 0;
 }
