--- a/static/deps/css/style.css
+++ b/static/deps/css/style.css
@@ -3,19 +3,22 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
     height: 100vh;
-    /*background-image: url('/images/background.jpg');*/
     background-attachment: fixed;
     background-size: cover;
+    background-color:  #A9B9C8 !important;
 }
 
 header {
     display: flex;
     align-items: center;
-    padding: 12px;
+    padding: 16px;
     background-color: #3a3939;
     color: white;
+}
+ul{
+    margin-top: 0;
+    margin-bottom: 0 !important;
 }
 .container{
     display: flex;
@@ -24,9 +27,7 @@ header {
     width: 100%;
     height: 100%;
 }
-.row{
-    width: 100%;
-}
+
 .content {
     margin: 0 auto;
     height: 100%;
@@ -58,8 +59,8 @@ footer{
     width: 80px;
 }
 .crypto-list {
-    max-width: 1400px;
-    margin: 20px 0;
+    max-width: 94%;
+    margin: 0 auto 20px auto;
 }
 .nav-item.dropdown{
     text-align: end;
@@ -68,17 +69,19 @@ footer{
 .list_header {
     display: flex;
     background-color: #333;
-    padding: 10px;
+    padding: 14px;
     color: white;
-    border-radius: 5px 5px 0 0;
+    border-radius: 20px 20px 0 0;
+    font-size: 22px;
 }
 .list_header_item {
     flex: 2;
     text-align: left;
+    padding-left: 8px;
 }
 .coin_item {
     display: flex;
-    padding: 8px;
+    padding: 8px 8px 8px 24px;
     align-items: center;
     background-color: #1c1c1c;
     color: white;
@@ -138,8 +141,7 @@ footer{
     width: 100%;
 }
 .pagination{
-    bottom: calc(10vh + 10px);
-    position: fixed;
+    bottom: calc(10px);
     padding: 0;
 }
 #coin-search {
@@ -157,8 +159,10 @@ footer{
     padding: 5px 15px;
     margin: 0 5px;
 }
-
-
+.btn.btn-outline-success.text-white {
+    border-radius: 12px;
+    width: 120px;
+}
 #profile-page {
     background-color: #fff;
     width: 60%;
@@ -184,7 +188,7 @@ footer{
 }
 
 button[type="submit"] {
-    background-color: #28a745;
+    background-color: #007BFF;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -203,7 +207,7 @@ button[type="submit"] {
     background-color: #2b2f32 !important;
 }
 @media (min-width: 992px) {
-  .container {
-    max-width: none !important;
-  }
+    .container {
+        max-width: none !important;
+    }
 }
