--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,8 +14,8 @@
                         <input type="hidden" name="next" value="{{ request.GET.next }}">
                     {% endif %} 
                         <div class="mb-3">
-                            <label for="id_username" class="form-label">Name</label>
-                            <input type="text" class="form-control" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" name="username" id="id_username" placeholder="Enter your name" required>
+                            <label for="id_username" class="form-label">Username</label>
+                            <input type="text" class="form-control" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" name="username" id="id_username" placeholder="Enter your username" required>
                         </div>
                         <div class="mb-3">
                             <label for="id_password" class="form-label">Password</label>
@@ -25,7 +25,8 @@
                         <button type="submit" class="btn btn-dark btn-block">Enter</button>
                    </form>
                     <div class="mt-3">
-                        <a href="#">Forgot password?</a> | <a href="{% url 'user:registration' %}">Create account</a>
+{#                        <a href="#">Forgot password?</a> | <a href="{% url 'user:registration' %}">Create account</a>#}
+                        <a href="{% url 'user:registration' %}">Create account</a>
                     </div>
                     <hr>
                 </div>
